# opengl-playground

./: .gitignore  CMakeLists.txt  GenVS2019proj.bat  glad.c  main.cpp
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  opengl-demo.vcxproj  opengl-demo.vcxproj.filters  opengl-playground.sln  opengl-playground.vcxproj  opengl-playground.vcxproj.filters
_build/_build-glfw-3.3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
_build/_build-glfw-3.3/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
